// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import { z } from 'zod';

/** Identifier type for public.migrations */
export type MigrationsMigrationId = number & { __brand: 'public.migrations' };

/**
 * Represents the table public.migrations
 * Tracks database schema migrations and their execution history.
 */
export default interface Migrations {
  migration_id: MigrationsMigrationId;

  created_at: Date;

  /** Name or description of the migration. */
  name: string | null;
}

/**
 * Represents the initializer for the table public.migrations
 * Tracks database schema migrations and their execution history.
 */
export interface MigrationsInitializer {
  /** Default value: nextval('migrations_migration_id_seq'::regclass) */
  migration_id?: MigrationsMigrationId;

  /** Default value: now() */
  created_at?: Date;

  /** Name or description of the migration. */
  name?: string | null;
}

/**
 * Represents the mutator for the table public.migrations
 * Tracks database schema migrations and their execution history.
 */
export interface MigrationsMutator {
  migration_id?: MigrationsMigrationId;

  created_at?: Date;

  /** Name or description of the migration. */
  name?: string | null;
}

export const migrationsMigrationId = z.number() as unknown as z.Schema<MigrationsMigrationId>;

export const migrations = z.object({
  migration_id: migrationsMigrationId,
  created_at: z.date(),
  name: z.string().nullable(),
}) as unknown as z.Schema<Migrations>;

export const migrationsInitializer = z.object({
  migration_id: migrationsMigrationId.optional(),
  created_at: z.date().optional(),
  name: z.string().optional().nullable(),
}) as unknown as z.Schema<MigrationsInitializer>;

export const migrationsMutator = z.object({
  migration_id: migrationsMigrationId.optional(),
  created_at: z.date().optional(),
  name: z.string().optional().nullable(),
}) as unknown as z.Schema<MigrationsMutator>;
